<resources>
    <string name="app_name">AndroidSprint</string>
    <string name="text_category">Категории</string>
    <string name="text_icon_heart_empty">Icon heart empty</string>
    <string name="text_favorites">Избранное</string>
    <string name="fragment_categories_text">Fragment Categories</string>
    <string name="text_fragment_of_categories">Fragment of Categories</string>
    <string name="text_fragment_of_favorites">Fragment of Favorites</string>
    <string name="image_of_categories">Image of categories</string>
    <string name="image_of_category_item">Image of category item</string>
    <string name="burgers">Бургеры</string>
    <string name="burger_description">Рецепты всех популярных видов бургеров</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_recipes_list_fragment">Recipes list fragment</string>
    <string name="text_image_of_recipe">Image of recipe</string>
    <string name="text_hamburger">Гамбургер</string>
    <string name="text_portion">Ингредиенты</string>
    <string name="text_portion_description">Порции:</string>
    <string name="text_portion_count">3</string>
    <string name="text_fragment_of_recipe">Fragment of recipe</string>
    <string name="image_of_recipe">Image of recipe</string>
    <string name="text_burgers">Бургеры</string>
    <string name="recipe_image">Recipe image</string>
    <string name="text_burger_with_mushrooms_and_cheese">Бургер с грибами и сыром</string>
    <string name="text_ingredients">Ингредиенты</string>
    <string name="text_method">Способ приготовления</string>
    <string name="text_cheese">Сыр</string>
    <string name="text_100">100Г</string>
    <string name="text_step_method">1. В глубокой миске смешайте говяжий фарш, лук, чеснок, соль и перец. Разделите фарш на 4 равные части и сформируйте котлеты.</string>
    <string name="text_grams">Г</string>
    <string name="_3">3</string>
    <string name="text_method_number">1. </string>
    <string name="text_1">1</string>
    <string name="text_image_of_favorites">Image of favorites</string>
    <string name="text_image_of_favorite_header">Image of favorite header</string>
    <string name="text_favorites_title">Избранное</string>
</resources>