<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".RecipesListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="@dimen/header_height"
        android:layout_width="match_parent">

        <ImageView
            android:id="@+id/ivRecipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/text_image_of_recipe"
            android:scaleType="centerCrop"
            tools:src="@drawable/bg_categories"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleRecipe"
            style="@style/StyleTitle20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_space_16"
            android:layout_marginBottom="@dimen/main_space_16"
            android:background="@drawable/shape_rounded_white_bg"
            android:padding="@dimen/margin_10"
            tools:text="@string/text_hamburger"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layoutPortion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_space_16"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitlePortion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StyleTitle20"
            android:text="@string/text_portion"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPortionDescription"
                style="@style/StyleTitle16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_portion_description"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/StyleTitle16"
                android:layout_marginStart="@dimen/_6dp"
                tools:text="@string/text_portion_count"/>

        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBarPortionCount"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="3" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/main_space_half_16"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:itemCount="6"
        tools:listitem="@layout/item_category" />

</LinearLayout>