<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainContainerOfRecipe"
    android:background="@color/white_color"
    tools:context=".RecipeFragment"
    tools:ignore="ScrollViewCount">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutRecipeConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivRecipeImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@drawable/bg_categories" />

        <TextView
            android:id="@+id/tvRecipeTitle"
            style="@style/StyleTitle20"
            android:layout_width="@dimen/width_title_of_recipe"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_white_bg"
            android:padding="@dimen/margin_10"
            android:layout_marginStart="@dimen/main_space_16"
            android:layout_marginBottom="@dimen/main_space_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/text_burger_with_mushrooms_and_cheese" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_space_half_16"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutRecipeConstraint"
            tools:layout_editor_absoluteX="8dp">

            <TextView
                android:id="@+id/tvIngredientsTitle"
                style="@style/StyleTitle20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ingredients" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvMethodTitle"
            style="@style/StyleTitle20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_space_16"
            android:layout_marginTop="@dimen/main_space_16"
            android:text="@string/text_method"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/tvCookingStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>